--- a/src/backend/DockerfileTest
+++ b/src/backend/DockerfileTest
@@ -12,7 +12,7 @@ RUN dotnet restore
 
 COPY . .
 
-RUN dotnet publish "app/WebApi/WebApi.csproj" -c Release -o /app/publish
+RUN dotnet publish "C:\app\AuthService\AuthService.csproj" -c Release -o "C:\app\publish\"
 
 FROM publish AS test
 
