feat(infra): add tests in ci

--- a/src/backend/DockerfileTest
+++ b/src/backend/DockerfileTest
@@ -2,7 +2,7 @@ FROM mcr.microsoft.com/dotnet/sdk:7.0 AS base
 
 WORKDIR /app
 
-FROM mcr.microsoft.com/dotnet/sdk:7.0 AS publish
+FROM mcr.microsoft.com/dotnet/sdk:7.0 AS test
 
 WORKDIR /app
 
@@ -11,11 +11,5 @@ COPY ["src/backend/.", "."]
 RUN dotnet restore
 
 COPY . .
-
-RUN dotnet publish "C:\app\AuthService\AuthService.csproj" -c Release -o "C:\app\publish\"
-
-FROM publish AS test
-
-WORKDIR /app
 
 ENTRYPOINT ["dotnet", "test"]
