--- a/.github/workflows/test-int-be.yml
+++ b/.github/workflows/test-int-be.yml
@@ -26,10 +26,10 @@ jobs:
         run: |
           gcloud auth configure-docker europe-docker.pkg.dev
 
-      - name: Auth to docker registry
-        shell: pwsh
-        run: |
-          & $Env:ProgramFiles\Docker\Docker\DockerCli.exe -SwitchDaemon
+#      - name: Auth to docker registry
+#        shell: pwsh
+#        run: |
+#          & $Env:ProgramFiles\Docker\Docker\DockerCli.exe -SwitchDaemon
 
       - name: Run backend and postgres for testing
         run: |
