--- a/src/backend/DockerfilePostgres
+++ b/src/backend/DockerfilePostgres
@@ -1,26 +1,24 @@
-FROM mcr.microsoft.com/windows/servercore:ltsc2019
+FROM mcr.microsoft.com/windows/servercore:ltsc2016 AS download
 
 SHELL ["powershell", "-Command", "$ErrorActionPreference = 'Stop'; $ProgressPreference = 'SilentlyContinue';"]
 
-RUN [Net.ServicePointManager]::SecurityProtocol = 'Tls12, Tls11, Tls' ; \
-    Invoke-WebRequest -UseBasicParsing -Uri 'https://get.enterprisedb.com/postgresql/postgresql-12.4-1-windows-x64.exe' -OutFile 'postgresql-installer.exe' ; \
-    Start-Process postgresql-installer.exe -ArgumentList '--mode unattended --superpassword password' -Wait ; \
-    Remove-Item postgresql-installer.exe -Force
+ENV PG_VERSION 11.7-1
 
-RUN Invoke-WebRequest -UseBasicParsing -Uri 'https://dotnetbinaries.blob.core.windows.net/servicemonitor/2.0.1.3/ServiceMonitor.exe' -OutFile 'ServiceMonitor.exe'
+RUN Invoke-WebRequest $('http://get.enterprisedb.com/postgresql/postgresql-{0}-windows-x64-binaries.zip' -f $env:PG_VERSION) -OutFile 'postgres.zip' -UseBasicParsing ; \
+    Expand-Archive postgres.zip -DestinationPath C:\ ; \
+    Remove-Item postgres.zip
 
-SHELL ["cmd", "/S", "/C"]
+RUN Invoke-WebRequest 'http://download.microsoft.com/download/0/6/4/064F84EA-D1DB-4EAA-9A5C-CC2F0FF6A638/vc_redist.x64.exe' -OutFile vcredist_x64.exe ; \
+    Start-Process vcredist_x64.exe -ArgumentList '/install', '/passive', '/norestart' -NoNewWindow -Wait ; \
+    Remove-Item vcredist_x64.exe
 
-RUN setx /M PATH "C:\\Program Files\\PostgreSQL\\12\\bin;%PATH%" && \
-    setx /M DATA_DIR "C:\\Program Files\\PostgreSQL\\12\\data" && \
-    setx /M PGPASSWORD "password"
+FROM mcr.microsoft.com/windows/nanoserver:10.0.14393.2068
 
-RUN powershell -Command "Do { pg_isready -q } Until ($?)" && \
-    echo listen_addresses = '*' >> "%DATA_DIR%\\postgresql.conf" && \
-    echo host  all  all  0.0.0.0/0  trust >> "%DATA_DIR%\\pg_hba.conf" && \
-    echo host  all  all  ::0/0      trust >> "%DATA_DIR%\\pg_hba.conf" && \
-    net stop postgresql-x64-12
+COPY --from=download /pgsql /pgsql
+COPY --from=download /windows/system32/VCRUNTIME140.dll /pgsql/bin/VCRUNTIME140.dll
+COPY --from=download /windows/system32/msvcp140.dll /pgsql/bin/msvcp140.dll
+
+RUN setx /M PATH "C:\pgsql\bin;%PATH%"
 
 EXPOSE 5432
-
-CMD ["ServiceMonitor.exe", "postgresql-x64-12"]
+CMD ["postgres"]
