--- a/.github/workflows/deploy-fe.yml
+++ b/.github/workflows/deploy-fe.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Download fe artifact
         uses: dawidd6/action-download-artifact@v2
         with:
-          workflow: build-fe.yml
+          workflow: build-test-all.yml
           name: fe-artifact
           path: .
 
