--- a/.github/workflows/build-test-all.yml
+++ b/.github/workflows/build-test-all.yml
@@ -27,25 +27,25 @@ jobs:
 
   build-be:
     if: ${{ needs.check-changed-paths.outputs.backend == 'true' }}
+    runs-on: ubuntu-latest
     needs:
       - check-changed-paths
     steps:
       - uses: ./.github/actions/build-be
-    secrets: inherit
 
   test-be:
     if: ${{ needs.check-changed-paths.outputs.backend == 'true' }}
+    runs-on: ubuntu-latest
     needs:
       - check-changed-paths
       - build-be
     steps:
       - uses: ./.github/actions/test-int-be
-    secrets: inherit
 
   build-fe:
     if: ${{ needs.check-changed-paths.outputs.frontend == 'true' }}
+    runs-on: ubuntu-latest
     needs:
       - check-changed-paths
     steps:
       - uses: ./.github/actions/build-fe
-    secrets: inherit
