--- a/.github/actions/build-be/action.yml
+++ b/.github/actions/build-be/action.yml
@@ -1,6 +1,9 @@
 name: "build-be"
-
 description: "Build and push backend Docker image"
+inputs:
+  CICD_SA_GCP_JSON_KEY:
+    description: 'Json key to GCP SA'
+    required: true
 runs:
   using: "composite"
   steps:
@@ -9,7 +12,7 @@ runs:
     - name: Authenticate to Google Cloud
       uses: 'google-github-actions/auth@v0.8.2'
       with:
-        credentials_json: '${{ secrets.CICD_SA_GCP_JSON_KEY }}'
+        credentials_json: '${{ inputs.CICD_SA_GCP_JSON_KEY }}'
 
     - name: Build, tag and push Docker image
       shell: bash
