--- a/.github/workflows/build-test-all.yml
+++ b/.github/workflows/build-test-all.yml
@@ -21,20 +21,25 @@ jobs:
               - 'src/frontend/**'
             backend:
               - 'src/backend/**'
+            workflow:
+              - '.github/**'
     outputs:
       frontend: ${{ steps.changes.outputs.frontend }}
       backend: ${{ steps.changes.outputs.backend }}
+      workflow: ${{ steps.changes.outputs.workflow }}
 
   build-be:
-    if: ${{ needs.check-changed-paths.outputs.backend == 'true' }}
+    if: ${{ needs.check-changed-paths.outputs.backend == 'true'  || needs.check-changed-paths.outputs.workflow == 'true' }}
     runs-on: ubuntu-latest
     needs:
       - check-changed-paths
     steps:
       - uses: ./.github/actions/build-be
+        with:
+          CICD_SA_GCP_JSON_KEY: ${{ secrets.CICD_SA_GCP_JSON_KEY }}
 
   test-be:
-    if: ${{ needs.check-changed-paths.outputs.backend == 'true' }}
+    if: ${{ needs.check-changed-paths.outputs.backend == 'true' || needs.check-changed-paths.outputs.workflow == 'true' }}
     runs-on: ubuntu-latest
     needs:
       - check-changed-paths
@@ -43,7 +48,7 @@ jobs:
       - uses: ./.github/actions/test-int-be
 
   build-fe:
-    if: ${{ needs.check-changed-paths.outputs.frontend == 'true' }}
+    if: ${{ needs.check-changed-paths.outputs.frontend == 'true' || needs.check-changed-paths.outputs.workflow == 'true' }}
     runs-on: ubuntu-latest
     needs:
       - check-changed-paths
