--- a/.github/workflows/build-test-all.yml
+++ b/.github/workflows/build-test-all.yml
@@ -34,6 +34,7 @@ jobs:
     needs:
       - check-changed-paths
     steps:
+      - uses: actions/checkout@v3
       - uses: ./.github/actions/build-be
         with:
           CICD_SA_GCP_JSON_KEY: ${{ secrets.CICD_SA_GCP_JSON_KEY }}
@@ -45,6 +46,7 @@ jobs:
       - check-changed-paths
       - build-be
     steps:
+      - uses: actions/checkout@v3
       - uses: ./.github/actions/test-int-be
 
   build-fe:
@@ -53,4 +55,5 @@ jobs:
     needs:
       - check-changed-paths
     steps:
+      - uses: actions/checkout@v3
       - uses: ./.github/actions/build-fe
