--- a/.github/workflows/build-test-all.yml
+++ b/.github/workflows/build-test-all.yml
@@ -21,28 +21,39 @@ jobs:
               - 'src/frontend/**'
             backend:
               - 'src/backend/**'
+            workflow:
+              - '.github/**'
     outputs:
       frontend: ${{ steps.changes.outputs.frontend }}
       backend: ${{ steps.changes.outputs.backend }}
+      workflow: ${{ steps.changes.outputs.workflow }}
 
   build-be:
-    if: ${{ needs.check-changed-paths.outputs.backend == 'true' }}
+    if: ${{ needs.check-changed-paths.outputs.backend == 'true'  || needs.check-changed-paths.outputs.workflow == 'true' }}
+    runs-on: ubuntu-latest
     needs:
       - check-changed-paths
-    uses: ./.github/workflows/build-be.yml
-    secrets: inherit
+    steps:
+      - uses: actions/checkout@v3
+      - uses: ./.github/actions/build-be
+        with:
+          CICD_SA_GCP_JSON_KEY: ${{ secrets.CICD_SA_GCP_JSON_KEY }}
 
   test-be:
-    if: ${{ needs.check-changed-paths.outputs.backend == 'true' }}
+    if: ${{ needs.check-changed-paths.outputs.backend == 'true' || needs.check-changed-paths.outputs.workflow == 'true' }}
+    runs-on: ubuntu-latest
     needs:
       - check-changed-paths
       - build-be
-    uses: ./.github/workflows/test-int-be.yml
-    secrets: inherit
+    steps:
+      - uses: actions/checkout@v3
+      - uses: ./.github/actions/test-int-be
 
   build-fe:
-    if: ${{ needs.check-changed-paths.outputs.frontend == 'true' }}
+    if: ${{ needs.check-changed-paths.outputs.frontend == 'true' || needs.check-changed-paths.outputs.workflow == 'true' }}
+    runs-on: ubuntu-latest
     needs:
       - check-changed-paths
-    uses: ./.github/workflows/build-fe.yml
-    secrets: inherit
+    steps:
+      - uses: actions/checkout@v3
+      - uses: ./.github/actions/build-fe
