--- a/.github/actions/test-int-be/action.yml
+++ b/.github/actions/test-int-be/action.yml
@@ -34,5 +34,4 @@ runs:
         with:
           name: test-reports
           path: |
-            coverage.xml
-        working-directory: src/backend
+            src/backend/coverage.xml
