feat(infra): fix sonarcoverage

--- a/.github/actions/test-int-be/action.yml
+++ b/.github/actions/test-int-be/action.yml
@@ -21,6 +21,8 @@ runs:
 
       - name: Run tests
         run: |
+          dotnet tool install --global coverlet.console
+          
           coverlet ./AuthServiceTests/bin/Debug/net7.0/AuthServiceTests.dll \
             --target "dotnet" \
             --targetargs "test --no-build" \
