feat(infra): fix sonarcoverage

--- a/.github/actions/test-int-be/action.yml
+++ b/.github/actions/test-int-be/action.yml
@@ -21,6 +21,7 @@ runs:
 
       - name: Run tests
         run: |
+          dotnet tool install --global dotnet-sonarscanner
           dotnet tool install --global coverlet.console
           
           dotnet test --collect:"XPlat Code Coverage" --results-directory ./coverage
