--- a/.github/actions/test-int-be/action.yml
+++ b/.github/actions/test-int-be/action.yml
@@ -48,19 +48,19 @@ runs:
 
     - name: Run tests
       run: |
-        dotnet test --collect:"XPlat Code Coverage" --results-directory ./coverage
+        dotnet test --collect:"XPlat Code Coverage" --results-directory ./coverage -- DataCollectionRunSettings.DataCollectors.DataCollector.Configuration.Format=opencover
       shell: bash
       working-directory: src/backend
 
     - name: Move coverage
       run: |
-        mv coverage/**/coverage.cobertura.xml .
+        mv coverage/**/coverage.opencover.xml .
       shell: bash
       working-directory: src/backend
 
     - name: Build and analyze
       run: |
-        dotnet-sonarscanner begin /k:"PJATK-SPK_ingoodhands" /o:"pjatk-spk" /d:sonar.login="${{ inputs.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.cs.opencover.reportsPaths=coverage.cobertura.xml
+        dotnet-sonarscanner begin /k:"PJATK-SPK_ingoodhands" /o:"pjatk-spk" /d:sonar.login="${{ inputs.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.cs.opencover.reportsPaths=coverage.opencover.xml
         dotnet build --no-incremental
 
         dotnet-sonarscanner end /d:sonar.login="${{ inputs.SONAR_TOKEN }}"
