feat(infra): spectral ruleset

--- a/.github/workflows/build-test-all.yml
+++ b/.github/workflows/build-test-all.yml
@@ -39,6 +39,7 @@ jobs:
         run: |
           cd src/backend
           dotnet build
+          dotnet tool restore
           dotnet swagger tofile --output api.json .\WebApi\bin\Debug\net7.0\WebApi.dll v1
       - uses: stoplightio/spectral-action@latest
         with:
