feat(infra): fix sonar coverage

--- a/.github/actions/sonar/action.yml
+++ b/.github/actions/sonar/action.yml
@@ -40,9 +40,8 @@ runs:
 
     - name: Move coverage
       run: |
-        mv coverage/**/coverage.opencover.xml .
+        mv coverage.opencover.xml src/backend
       shell: bash
-      working-directory: src/backend
 
     - name: Build and analyze
       run: |
