--- a/.github/actions/test-int-be/action.yml
+++ b/.github/actions/test-int-be/action.yml
@@ -36,4 +36,4 @@ runs:
       uses: actions/upload-artifact@v3
       with:
         name: coverage
-        path: src/backend/coverage
+        path: src/backend/coverage/**/coverage.opencover.xml
