feat(infra): fix sonar coverage

--- a/.github/actions/sonar/action.yml
+++ b/.github/actions/sonar/action.yml
@@ -38,9 +38,9 @@ runs:
         name: coverage
         path: .
 
-    - name: Untar fe artifact
+    - name: Move coverage
       run: |
-        tar -xvf coverage -C .
+        
         mv coverage/**/coverage.opencover.xml src/backend
       shell: bash
 
