--- a/src/backend/Core/Configuration/Prd/config.json
+++ b/src/backend/Core/Configuration/Prd/config.json
@@ -6,7 +6,7 @@
     "scopes": "openid profile offline_access email api"
   },
   "connectionStrings": {
-    "database": "User ID=backend;Password=change_me;Database=in_good_hands;Host=indagoodhandsdev:europe-west1:backend-db;Port=5432;Connection Lifetime=0;"
+    "database": "User ID=backend;Password=change_me;Database=in_good_hands;Host=indagoodhandsdev:europe-west1:backend-db;Port=5432;Connection Lifetime=0;Include Error Detail=true"
   },
   "urls": {
     "frontend": "https://indagoodhandsdev.web.app/"
