feat(infra): fix sonar coverage

--- a/.github/actions/sonar/action.yml
+++ b/.github/actions/sonar/action.yml
@@ -41,7 +41,9 @@ runs:
 
     - name: Move coverage report
       shell: bash
-      run: mv coverage.opencover.xml src/backend/
+      run: |
+        ls -R
+        echo ${{steps.download.outputs.download-path}}
 
     - name: Build and analyze
       run: |
