feat(infra): fix sonar coverage

--- a/.github/actions/sonar/action.yml
+++ b/.github/actions/sonar/action.yml
@@ -42,8 +42,7 @@ runs:
     - name: Move coverage report
       shell: bash
       run: |
-        ls -R
-        echo ${{steps.download.outputs.download-path}}
+        mv **/coverage.opencover.xml src/backend/
 
     - name: Build and analyze
       run: |
