--- a/.github/actions/test-int-be/action.yml
+++ b/.github/actions/test-int-be/action.yml
@@ -1,36 +1,39 @@
-name: "test-int-bet"
-description: "Run integration tests"
+name: "SonarCloud"
+description: "Run sonar analysis"
+#inputs:
+#  SONAR_TOKEN:
+#    description: 'Token to auth to Sonar'
+#    required: true
+#  GITHUB_TOKEN:
+#    description: 'Token to auth to GitHub'
+#    required: true
 runs:
   using: "composite"
   steps:
-      - uses: actions/checkout@v3
+    - uses: actions/checkout@v3
 
-#      - name: Authenticate to Google Cloud
-#        uses: 'google-github-actions/auth@v0.8.2'
-#        with:
-#          credentials_json: '${{ secrets.CICD_SA_GCP_JSON_KEY }}'
+    - name: Set variables for testing
+      run: |
+        echo "DB_HOST=localhost" >> $GITHUB_ENV
+        echo "DB_USER=postgres" >> $GITHUB_ENV
+        echo "DB_PASSWORD=ingoodhands" >> $GITHUB_ENV
+        echo "DB_DATABASE=in_good_hands" >> $GITHUB_ENV
+        echo "DB_PORT=5432" >> $GITHUB_ENV
+      shell: bash
 
-#      - name: Auth to docker registry
-#        run: |
-#          gcloud auth configure-docker europe-docker.pkg.dev
-#        shell: bash
+    - name: Run backend and postgres for testing
+      run: |
+        docker-compose -f docker-compose.ci.yml up -d
+      shell: bash
 
-      - name: Set variables for testing
-        run: |
-          echo "DB_HOST=localhost" >> $GITHUB_ENV
-          echo "DB_USER=postgres" >> $GITHUB_ENV
-          echo "DB_PASSWORD=ingoodhands" >> $GITHUB_ENV
-          echo "DB_DATABASE=in_good_hands" >> $GITHUB_ENV
-          echo "DB_PORT=5432" >> $GITHUB_ENV
-        shell: bash
+    - name: Run tests
+      run: |
+        dotnet test --collect:"XPlat Code Coverage" --results-directory ./coverage -- DataCollectionRunSettings.DataCollectors.DataCollector.Configuration.Format=opencover
+      shell: bash
+      working-directory: src/backend
 
-      - name: Run backend and postgres for testing
-        run: |
-          docker-compose -f docker-compose.ci.yml up -d
-        shell: bash
-
-      - name: Exec into backend container and run tests
-        run: |
-          dotnet test
-        shell: bash
-        working-directory: src/backend
+    - name: Upload fe artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: coverage
+        path: src/backend/coverage
