--- a/.github/workflows/deploy-be.yml
+++ b/.github/workflows/deploy-be.yml
@@ -47,3 +47,12 @@ jobs:
             DB_PASSWORD=${{ secrets.DB_PASSWORD }}
             DB_DATABASE=${{ secrets.DB_DATABASE }}
             DB_PORT=5432
+
+      - name: sonar
+        needs:
+        steps:
+          - uses: actions/checkout@v3
+          - uses: ./.github/actions/sonar
+            with:
+              SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+              branch: main
