fix(infra): rename action name to more friendly

--- a/.github/workflows/build-test-all.yml
+++ b/.github/workflows/build-test-all.yml
@@ -9,6 +9,7 @@ permissions:
 
 jobs:
   check-changed-paths:
+    name: "Check changed paths"
     permissions:
       pull-requests: write
     runs-on: ubuntu-latest
