--- a/.github/workflows/build-test-all.yml
+++ b/.github/workflows/build-test-all.yml
@@ -30,7 +30,7 @@ jobs:
       workflow: ${{ steps.changes.outputs.workflow }}
 
   spectral:
-    name: "Check API quality"
+    name: "Check web api quality"
     if: ${{ needs.check-changed-paths.outputs.backend == 'true'  || needs.check-changed-paths.outputs.workflow == 'true' }}
     runs-on: ubuntu-latest
     needs:
