feat(infra): fix sonar coverage main

--- a/.github/actions/sonar/action.yml
+++ b/.github/actions/sonar/action.yml
@@ -1,5 +1,5 @@
-name: "test-int-bet"
-description: "Run integration tests"
+name: "SonarCloud analysis"
+description: "Run Sonar analysis"
 inputs:
   SONAR_TOKEN:
     description: 'Token to auth to Sonar'
