feat(infra): add api style check

--- a/.github/workflows/build-test-all.yml
+++ b/.github/workflows/build-test-all.yml
@@ -33,7 +33,7 @@ jobs:
     name: "Check web api quality"
     permissions:
       id-token: write
-      contents: read
+      contents: write
     if: ${{ needs.check-changed-paths.outputs.backend == 'true'  || needs.check-changed-paths.outputs.workflow == 'true' }}
     runs-on: ubuntu-latest
     needs:
