--- a/.github/workflows/build-test-all.yml
+++ b/.github/workflows/build-test-all.yml
@@ -36,6 +36,10 @@ jobs:
       contents: write
       issues: write
       pull-requests: write
+      pages: write
+      checks: write
+      deployments: write
+      statuses: write
     if: ${{ needs.check-changed-paths.outputs.backend == 'true'  || needs.check-changed-paths.outputs.workflow == 'true' }}
     runs-on: ubuntu-latest
     needs:
