--- a/src/backend/Core/Core.csproj
+++ b/src/backend/Core/Core.csproj
@@ -15,9 +15,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Content Include="WebApi\Hello.html">
+	  <Resource Include="WebApi\Hello.html">
 	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-	  </Content>
+	  </Resource>
 	</ItemGroup>
 
 	<ItemGroup>
