--- a/src/backend/AuthServiceTests/AuthServiceTests.csproj
+++ b/src/backend/AuthServiceTests/AuthServiceTests.csproj
@@ -19,8 +19,14 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<SonarQubeSetting Include="sonar.coverage.exclusions">
+			<Value>**</Value>
+		</SonarQubeSetting>
+	</ItemGroup>
+
+	<ItemGroup>
 		<ProjectReference Include="..\AuthService\AuthService.csproj" />
-		<ProjectReference Include="..\Tests.Core\TestsBase.csproj" />
+		<ProjectReference Include="..\TestsBase\TestsBase.csproj" />
 	</ItemGroup>
 
 </Project>
