--- a/src/backend/TestsBase/TestsBase.csproj
+++ b/src/backend/TestsBase/TestsBase.csproj
@@ -10,6 +10,12 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<SonarQubeSetting Include="sonar.coverage.exclusions">
+			<Value>**</Value>
+		</SonarQubeSetting>
+	</ItemGroup>
+
+	<ItemGroup>
 		<ProjectReference Include="..\Core\Core.csproj" />
 	</ItemGroup>
 
