--- a/.github/actions/sonar/action.yml
+++ b/.github/actions/sonar/action.yml
@@ -47,7 +47,7 @@ runs:
 
     - name: Build and analyze
       run: |
-        reports=$(find src/backend -type f -name "*coverage.opencover.xml" | xargs -n1 -I{} basename "{}" | tr '\n' ',')
+        reports=$(find . -type f -name "*coverage.opencover.xml" | xargs -n1 -I{} basename "{}" | tr '\n' ',')
         dotnet-sonarscanner begin /k:"PJATK-SPK_ingoodhands" /o:"pjatk-spk" /d:sonar.login="${{ inputs.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.cs.opencover.reportsPaths=$reports
         dotnet build --no-incremental
         dotnet-sonarscanner end /d:sonar.login="${{ inputs.SONAR_TOKEN }}"
