fix(sonar): fixes

--- a/src/frontend/sonar-project.properties
+++ b/src/frontend/sonar-project.properties
@@ -3,6 +3,6 @@ sonar.projectKey=pjatk-spk_ingoodhands-frontend
 sonar.organization=pjatk-spk
 #sonar.javascript.lcov.reportPaths=
 
-#sonar.exclusions=
+sonar.exclusions=Dockerfile
 
 #sonar.coverage.exclusions=
