--- a/src/backend/Core/Core.csproj
+++ b/src/backend/Core/Core.csproj
@@ -10,17 +10,18 @@
 		<GenerateRuntimeConfigurationFiles>True</GenerateRuntimeConfigurationFiles>
 	</PropertyGroup>
 
-
-
-
 	<ItemGroup>
 		<SonarQubeSetting Include="sonar.coverage.exclusions">
-			<Value>**</Value>
+			<Value>Configuration/**</Value>
+			<Value>Migrations/**</Value>
+			<Value>Database/**</Value>
+			<Value>Setup/**</Value>
 		</SonarQubeSetting>
 	</ItemGroup>
 
 	<ItemGroup>
 		<SonarQubeSetting Include="sonar.exclusions">
+			<Value>Configuration/**</Value>
 			<Value>Migrations/**</Value>
 		</SonarQubeSetting>
 	</ItemGroup>
@@ -55,7 +56,7 @@
 
 	<ItemGroup>
 		<Folder Include="Migrations\" />
-		<Folder Include="Swagger\" />
+		<Folder Include="Setup\Swagger\" />
 	</ItemGroup>
 
 	<ItemGroup>
