--- a/src/backend/Worker/Properties/launchSettings.json
+++ b/src/backend/Worker/Properties/launchSettings.json
@@ -1,10 +1,20 @@
 ﻿{
+  "$schema": "https://json.schemastore.org/launchsettings.json",
+  "iisSettings": {
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
+    "iisExpress": {
+      "applicationUrl": "http://localhost:8565",
+      "sslPort": 44333
+    }
+  },
   "profiles": {
-    "Worker": {
+    "WebApi": {
       "commandName": "Project",
+      "commandLineArgs": "--urls https://localhost:7149;http://localhost:5115",
       "dotnetRunMessages": true,
       "environmentVariables": {
-        "DOTNET_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development"
       }
     }
   }
