fix(sonar): add exclusions

--- a/src/backend/Core/Core.csproj
+++ b/src/backend/Core/Core.csproj
@@ -16,6 +16,7 @@
 			<Value>Migrations/**</Value>
 			<Value>Database/**</Value>
 			<Value>Setup/**</Value>
+			<Value>CoreModule.cs</Value>
 		</SonarQubeSetting>
 	</ItemGroup>
 
