--- a/src/backend/Worker/Worker.csproj
+++ b/src/backend/Worker/Worker.csproj
@@ -12,7 +12,7 @@
 
 	<ItemGroup>
 		<SonarQubeSetting Include="sonar.coverage.exclusions">
-			<Value>Controllers/**</Value>
+			<Value>**</Value>
 		</SonarQubeSetting>
 	</ItemGroup>
 
